--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
     <link rel="shortcut icon" href="Media/favicon.ico" type="image/x-icon">
     <title>Music Website</title>
     <link rel="stylesheet" href="style.css">
-
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
 
 </head>
@@ -33,7 +35,9 @@
             </div>
             <div class="right-col">
                 <p>Click Here to listen</p>
-                <img src="./Media/play.png" alt="play-button" id="icon">
+                  <a href="#" class="btn btn-info btn-lg">
+          <span class="glyphicon glyphicon-play"  id="icon"></span> Play
+        </a>
             </div>
         </div>
         </div>
